<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:showIn="@layout/app_bar_main">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/form_password"
        android:hint="@string/form_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_loggin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_login" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_signup" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>